--- a/src/css/base.css
+++ b/src/css/base.css
@@ -59,88 +59,4 @@ s, i, em { font-style: normal; text-decoration: none; }
 
 /*公共部分*/
 /************************************/
-#epet { min-width: 1200px; overflow: hidden; }
-
-/*-----------headerTop start ------------*/
-#headerTop { position: relative; line-height: 28px; border-bottom: 1px solid #ddd; background-color: #f5f5f5; font-size: 12px; text-align: center; z-index: 1000; }
-
-#headerTop .header_tl { float: left; width: 500px; }
-
-#headerTop .header_tl li { float: left; }
-
-#headerTop .header_tl li i { display: inline-block; position: absolute; width: 14px; height: 14px; background: url("../images/sprite.fw.png") no-repeat; }
-
-#headerTop .header_tl li i.prev1 { background-position: 0 0; top: 8px; left: 40px; }
-
-#headerTop .header_tl li i.prev2 { background-position: -13px 0; top: 8px; left: 208px; }
-
-#headerTop .header_tl li i.behind { background-position: -27px 0; top: 8px; left: 188px; }
-
-#headerTop .header_tl li:hover i.behind { background-position: -27px -23px; }
-
-#headerTop .header_tl li a { display: block; padding: 0 16px; color: #444444; }
-
-#headerTop .header_tl li a.dz { padding-right: 20px; }
-
-#headerTop .header_tl li a.zp { padding-left: 22px; }
-
-#headerTop .header_tl li:hover a.zp { color: #f90; }
-
-#headerTop .header_tl li a.pj { padding-left: 5px; }
-
-#headerTop .header_tl li:hover a { color: skyblue; }
-
-#headerTop .header_tr { float: right; width: 430px; }
-
-#headerTop .header_tr li { float: left; }
-
-#headerTop .header_tr li a { display: block; padding: 0 5px; color: #444444; }
-
-#headerTop .header_tr li a.fankui { color: #f00; }
-
-#headerTop .header_tr li:hover a { color: skyblue; }
-
-/*----------headerTop end ---------------*/
-/*------------header_newyear start*/
-#index_topadv { width: 1200px; height: 80px; margin: 0 auto; background: url("../images/xunnianwei.gif") no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; background-size: cover; box-sizing: border-box; }
-
-#index_topadv a { display: block; }
-
-/*---------- header start ---------*/
-#header { padding-top: 20px; }
-
-#header .header_l { width: 268px; height: 94px; background: url("../images/epetdoglogo.png") no-repeat; text-indent: -2000em; }
-
-#header .header_c { width: 498px; padding: 17px 0 9px 23px; }
-
-#header .header_c .form .input { width: 380px; height: 34px; padding-left: 15px; border: 2px solid #459D36; border-right: none; }
-
-#header .header_c .form .btn { width: 75px; line-height: 33px; cursor: pointer; background: #459D36; color: #fff; }
-
-#header .header_c .form .btn:hover { box-shadow: 0 0 8px rgba(0, 0, 0, 0.4); }
-
-#header .header_c ul { padding-top: 14px; }
-
-#header .header_c ul li { float: left; font-size: 14px; color: #999; }
-
-#header .header_c ul li a { display: block; padding: 3px 0; }
-
-#header .header_c ul li a span { display: block; line-height: 14px; padding: 0 8px; border-right: 1px solid #666; color: #999; }
-
-#header .header_c ul li a span.active { color: #f00; }
-
-#header .header_c ul li a:hover span { color: #000; }
-
-#header .phonecode { width: 220px; height: 34px; padding: 6px 0 54px 18px; background: url("../images/phonecode.png") no-repeat center center; }
-
-#header .gobuy { padding: 17px 0 37px 0; position: relative; }
-
-#header .gobuy i { display: inline-block; position: absolute; top: 18px; left: 0px; width: 38px; height: 38px; border-radius: 8px; background: #459D36; margin-right: 10px; }
-
-#header .gobuy a { display: block; width: 130px; line-height: 38px; text-align: center; border: 1px solid #ccc; border-radius: 8px 8px; font-size: 12px; color: #666; }
-
-#header .gobuy a span { color: #f00; }
-
-/*---------- header start ---------*/
-/*------------- nav start --------*/
-/*------------- nav end ------------*/
+#epet { min-width: 1200px; overflow: hidden; box-sizing: border-box; }
