--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -55,310 +55,6 @@ s,i,em{ font-style:normal; text-decoration:none; }
 .font14{ font-size: 14px; }
 .font16{ font-size: 16px; }
 
-
 /*公共部分*/
 /************************************/
-#epet{ min-width:1200px; overflow: hidden;}
-// .fixed{ position:fixed; top:0; z-index:2; }
-// .fixed1{ position:fixed; top:0; left:39%; z-index:2; }
-// .fixed2{ position:fixed; top:70px; right: 0; left: 0; z-index:2; }
-
-
-/*-----------headerTop start ------------*/
-#headerTop {
-    position: relative;
-    line-height: 28px;
-    border-bottom: 1px solid #ddd;
-    background-color: #f5f5f5;
-    font-size: 12px;
-    text-align: center;
-    z-index: 1000;
-    .header_tl {
-        float: left;
-        width: 500px;
-        li{
-            float: left;
-            i {
-                display: inline-block;
-                position: absolute;
-                width: 14px;
-                height: 14px;
-                background: url("../images/sprite.fw.png") no-repeat; 
-            }
-            i.prev1 {
-                background-position: 0 0;
-                top: 8px;
-                left: 40px;                 
-            }
-            i.prev2 {
-                background-position: -13px 0;
-                top: 8px;
-                left: 208px;      
-            }
-            i.behind {
-                background-position: -27px 0;
-                top: 8px;
-                left: 188px;  
-
-            }
-            &:hover i.behind {
-                background-position: -27px -23px;
-            }
-            a{
-                display: block;
-                padding: 0 16px;
-                color: #444444;
-            }
-            a.dz {
-                padding-right: 20px;
-            }
-            a.zp {
-                padding-left: 22px;
-            }
-            &:hover a.zp {
-                color: #f90;
-            }
-            a.pj {
-                padding-left: 5px;
-            }
-            &:hover a{
-                color: skyblue;
-            }
-        }
-    }
-    .header_tr {
-        float: right;
-        width: 430px;
-        li {
-            float: left;
-            a {
-                display: block;
-                padding: 0 5px;
-                color: #444444;
-
-            }
-            a.fankui{
-                    color: #f00;
-            }
-            &:hover a{
-                color: skyblue;
-            }
-        }     
-    }
-}
-/*----------headerTop end ---------------*/
-/*------------header_newyear start*/
-#index_topadv {
-    width: 1200px;
-    height: 80px;
-    margin: 0 auto;
-    background: url("../images/xunnianwei.gif") no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    box-sizing: border-box;
-    a {
-        display: block;
-    }          
-}
-/*---------- header start ---------*/
-#header {
-    padding-top: 20px;
-    .header_l {
-        width: 268px;
-        height: 94px;
-        background: url("../images/epetdoglogo.png") no-repeat;
-            text-indent: -2000em;
-    }
-    .header_c {
-        width: 498px;
-        padding:17px 0 9px 23px;
-        .form {
-            .input {
-                width: 380px;
-                height: 34px;
-                padding-left: 15px;
-                border: 2px solid #459D36;
-                border-right: none;
-            }
-            .btn { 
-                width: 75px;
-                line-height: 33px;
-                cursor: pointer;
-                background: #459D36;
-                color: #fff;
-            }          
-            .btn:hover {
-                box-shadow: 0 0 8px rgba(0,0,0,.4);
-            }
-        }
-        ul {
-            padding-top: 14px;
-            li {
-                float: left;
-                font-size: 14px;
-                color: #999;
-                a {
-                    display: block;
-                    padding: 3px 0;
-                    span {
-                        display: block;
-                        line-height: 14px;
-                        padding: 0 8px;
-                        border-right: 1px solid #666;
-                        color: #999;
-                    }
-                    span.active {
-                        color: #f00;
-                    }
-                    &:hover span {
-                        color: #000;
-                    }  
-                } 
-                // &:hover a {
-                //     background: #ff0;
-                // }
-            }
-        }
-    }
-    .phonecode {
-        width:220px;
-        height: 34px;
-        padding: 6px 0 54px 18px;
-        background: url("../images/phonecode.png") no-repeat center center;    
-    }
-    .gobuy {
-        padding: 17px 0 37px 0;  
-        position: relative;
-        i {
-            display: inline-block;
-            position: absolute;
-            top: 18px;
-            left: 0px;
-            width: 38px;
-            height: 38px;
-            border-radius: 8px;
-            background: #459D36; 
-            margin-right: 10px;
-        }
-        a {
-            display: block;
-            width: 130px;
-            line-height: 38px;
-            text-align: center;
-            border: 1px solid #ccc;
-            border-radius: 8px 8px;
-            font-size: 12px;
-            color: #666;
-            span {
-                color: #f00;
-            }
-            
-        }
-    }
-}
-/*---------- header start ---------*/
-/*------------- nav start --------*/
-// #nav {
-//     padding-top: 10px;
-//     // position: relative;
-//     .maincates-title {
-//         width: 216px;
-//         border: 1px solid #ccc;
-//         span {
-//             float: left;
-//             position: relative;
-//             line-height: 34px;
-//             padding: 0 25px;
-//             i {
-//                 display: inline-block;
-//                 position: absolute;
-//                 width: 20px;
-//                 height: 16px;
-//                 background: url("../images/sprite.fw.png") no-repeat -78px 0;
-//             }
-//         } 
-//         .types {
-//             i {
-//                 background-position: -235px 0;
-//                 top: 10px;
-//                 left: 64px;
-//             }
-//             &:hover i {
-//                 background-position: -235px -23px;
-//             }
-//         }               
-//         .category {
-//             i {
-//                 background-position: -255px 0;
-//                 top: 10px;
-//                 left: 93px;
-//             }
-//             &:hover i {
-//                 background-position: -255px -23px;
-//             }
-//         }    
-//     }
-//     .fenlei {
-//         background: pink;
-//         position: absolute;
-//         top: 48px;
-//         left: 40px;
-//         li {
-//             float: left;
-//             h3 {
-//                 width: 218px;
-//                 padding: 0 5px;
-//                 line-height: 50px;
-//                 font-size: 14px;
-//                 border-bottom: 1px dotted #ccc;        
-//             }
-//         }
-//     }
-//     .menus {
-//         ul {
-//             li {
-//                 float: left;
-//                 padding: 0 25px;
-//                 position: relative;
-//                 transition: transform 2s;
-//                 a {
-//                     display: block;
-//                     line-height: 34px;
-//                     float: left;
-//                     font-size: 16px;
-//                     font-weight: bold;
-//                     color: #000;    
-//                 }
-//                 &:hover a {
-//                     color: #459D36;
-//                 }
-//                 i {
-//                     display: inline-block;
-//                     position: absolute;
-//                     left: -1px;
-//                     top: 8px;
-//                     float: left;
-//                     width: 24px;
-//                     height: 18px;
-//                     background: url("../images/sprite.fw.png") no-repeat -41px 0;
-//                 }
-//                 i.newdress {
-//                     position: absolute;
-//                     left: 73px;
-//                     top: -8px;
-//                     width: 17px;
-//                     height: 21px;
-//                     background: url("../images/new.gif") no-repeat;
-//                 }
-//                 // &:hover i:not(.newdress) {
-//                 //     // transform: rotate(360deg);
-//                 //     transform:scale(1.2) rotate(360deg);
-//                 // }
-//             }
-            
-//         }
-//     }
-// }
-
-/*------------- nav end ------------*/
+#epet{ min-width:1200px; overflow: hidden; box-sizing: border-box;}
