--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,1 +1,219 @@
+.banner {
+    .focus {
+        position:relative;
+        width:770px;
+        height:360px;
+        overflow:hidden;
+        ul {
+            position:absolute;
+            overflow:hidden;
+            li { 
+                float:left;
+                img {
+                    display: block;
+                }
+            }
+        }
+        .page {
+            position:absolute;
+            right:0;
+            bottom:0;
+            padding:10px;
+            span { 
+                display:inline-block;
+                margin:0 5px;
+                width:30px;
+                height:30px;
+                line-height:30px;
+                background-color:rgba(0,0,0,.6);
+                text-align:center;
+                color:#fff;
+                border-radius: 50%;
+                box-shadow:0 0 10px rgba(0,0,0,.5);
+            }
+            span.active{background-color: rgba(255,0,0,.8)}
+        }
+    }
+    .banner_r {
+        ul {
+            li {
+                position: relative;
+                width: 300px;
+                height: 120px;
+                transition: all 0.5s;
+                img {
+                    display: block; 
+                }
+                &:hover{
+                transform: translateX(-20px);
+            }   
+            }
+            
+        }
+    }
+}
+#surprise {
+    margin: 30px 0;
+    .container {
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        .sur_l {
+            img {
+                display: block;
+                width: 100%;
+            }
+        }
+        .sur_r {
+            margin-left: 15px;
+            .sur_rt {
+                width: 800px;
+                height: 66px;
+                margin: 0 20px;
+                border-bottom: 1px dashed #efefef;
+                overflow: hidden;
+                li {
+                    float: left;
+                    padding: 20px;
+                    position: relative;
+                    a,span{
+                        display: block; 
+                        color: #999;
+                        font-size: 14px;
+                        padding: 0 15px;
+                    }
+                    &:hover a {
+                        color: #666;
+                        font-size: 16px;
+                        font-weight: bold;
+
+                    } 
+                    &:hover span {
+                        color: #666;
+                        font-size: 16px;
+                        font-weight: bold;
+                        border-bottom: 2px solid #f00;
+                    } 
+                }
+            }
+            .sur_rb {
+                padding-top: 50px;
+                li {
+                    position: relative;
+                    float: left;
+                    padding-top: 30px;
+                    
+                    i {
+                        display: block;
+                        width: 54px;
+                        height: 54px;
+                        background: url("../images/sprite.fw.png") no-repeat 0 -77px;
+                        position: absolute;
+                        top: -30px;
+                        right: 0;
+                    }
+                    img {
+                        display: block;
+                        margin: 0 auto;
+                        width: 80%; 
+                        transition: all 1s;
+                    }
+                    img:hover {
+                        transform: translateY(-8px);
+                    }
+                    a {
+                        display: block;
+                        width: 200px;
+                        height: 40px;
+                        font-size: 12px;
+                        color: #000;
+                    }
+                    p {
+                        width: 160px;
+                        padding: 10px 0;
+                        margin-left: 20px;
+                        border-bottom: 5px solid #ccc;
+                        font-size: 12px;
+                        span {
+                            font-size: 18px;
+                            font-weight: bold;
+                            color: #f00;
+                        }
+
+                    }
+                    .jiesu {
+                        margin: 10px 50px 0 50px;
+                        width: 100px;
+                        line-height: 40px;
+                        text-align: center;
+                        background: #ccc;
+                        border-radius: 20px;
+                        font-size: 16px;
+                        color: #fff;
+                    }
+                    .jiesu:hover { background: #f90; }
+                }
+            }
+        }
+    }
+}
+.zhuliang {
+    margin: 30px 0;
+    .container { 
+        .zl_tit {
+            border-bottom: 1px solid #459D36;
+            h3 {
+                width: 200px;
+                height: 34px;
+                line-height: 28px;
+                padding-left: 40px;
+                background:url("../images/zhuliang.png") no-repeat;
+                font-size: 18px;
+            }    
+            ul { 
+                height: 34px;
+                border:1px solid #ccc;
+                border-bottom: 0 none;
+                li { 
+                    float: left;
+                    a { 
+                        display: block;
+                        height: 34px;
+                        padding-top:11px;
+                    }
+                    span { 
+                        display: block;
+                        height: 12px;
+                        line-height: 12px;
+                        padding:0 20px;
+                        font-size:12px;
+                        border-right:1px solid #CCCCCC;
+                    }
+                    &:hover a {
+                        height:34px;
+                        border:1px solid #C81624;
+                        border-bottom: 0 none;
+                        border-top-width:3px;
+                        margin-left:-1px;
+                        padding-top:8px;
+                    }
+                    &:hover span {
+                        border-right:0 none;
+                    }
+                    .last:hover a { 
+                        margin-right:-2px;
+                    }
+                }
+            }
+        }
+    }
+}
+// #box {
+//     width:200px;
+//     height:200px;
+//     border:1px solid #ddd;
+//     overflow:auto;
+//     div { height:1000px;
+//     }
+// }
+
 
