粗略完成了首页，同时修改了注册页面的小bug

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -60,18 +60,46 @@
 
 .zhuliang { margin: 30px 0; }
 
-.zhuliang .zl_tit h3 { width: 200px; height: 34px; line-height: 28px; padding-left: 40px; background: url("../images/zhuliang.png") no-repeat; font-size: 18px; }
+.zhuliang .zl_t h3 { width: 200px; height: 34px; line-height: 28px; padding-left: 40px; background: url("../images/zhuliang.png") no-repeat; font-size: 18px; }
 
-.zhuliang .zl_tit ul { height: 34px; border: 1px solid #ccc; border-bottom: 0 none; }
+.zhuliang .zl_t ul { height: 34px; border: 1px solid #ccc; border-bottom: 0 none; }
 
-.zhuliang .zl_tit ul li { float: left; }
+.zhuliang .zl_t ul li { float: left; }
 
-.zhuliang .zl_tit ul li a { display: block; height: 34px; padding-top: 11px; }
+.zhuliang .zl_t ul li a { display: block; height: 34px; padding-top: 11px; }
 
-.zhuliang .zl_tit ul li span { display: block; height: 12px; line-height: 12px; padding: 0 20px; font-size: 12px; border-right: 1px solid #CCCCCC; }
+.zhuliang .zl_t ul li span { display: block; height: 12px; line-height: 12px; padding: 0 20px; font-size: 12px; border-right: 1px solid #CCCCCC; }
 
-.zhuliang .zl_tit ul li:hover a { height: 34px; border: 1px solid green; border-bottom: 0 none; border-top-width: 3px; margin-left: -1px; padding-top: 8px; }
+.zhuliang .zl_t ul li:hover a { height: 34px; border: 1px solid green; border-bottom: 0 none; border-top-width: 3px; margin-left: -1px; padding-top: 8px; }
 
-.zhuliang .zl_tit ul li:hover span { border-right: 0 none; }
+.zhuliang .zl_t ul li:hover span { border-right: 0 none; }
 
-.zhuliang .zl_tit ul li .last:hover a { margin-right: -2px; }
+.zhuliang .zl_t ul li .last:hover a { margin-right: -2px; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t li { position: relative; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem01 { float: left; position: relative; border: 1px solid #ccc; border-left: 0 none; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem01 .p { width: 200px; position: absolute; top: 20px; left: 40px; z-index: 200; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem01 img { float: left; display: block; transition: all 1s; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem01 img:hover { transform: translateX(-3px); z-index: -10; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem02 { float: right; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem02 ul li { height: 150px; position: relative; border: 1px solid #ccc; border-left: 0 none; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem02 ul li .p { width: 200px; position: absolute; top: 20px; left: 40px; z-index: 200; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem02 ul li img { float: left; display: block; transition: all 1s; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_t .rem02 ul li img:hover { transform: translateX(-3px); }
+
+.zhuliang .zl_c .zl_ct .remen .remen_b li { float: left; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc; position: relative; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_b li .p { width: 200px; position: absolute; top: 20px; left: 40px; z-index: 200; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_b li img { float: left; display: block; transition: all 1s; }
+
+.zhuliang .zl_c .zl_ct .remen .remen_b li img:hover { transform: translateX(-3px); }
