--- a/src/sass/goods.scss
+++ b/src/sass/goods.scss
@@ -61,8 +61,13 @@
         min-height: 550px;
         padding-top: 20px;
         .gmd_l {
-            width: 450px;
-            margin-top: 60px;
+            margin: 80px;
+            .smallList img {
+                width: 40px;
+                float: left;  
+                margin-right: 8px;  
+            }
+            .gds-zoom-big img{min-width: 1000px;}
         }
         .gmd_r {
             width: 710px;
